# PGagoravai

./: .gitignore  CMakeLists.txt  entrada.txt  main.cpp
Camera/: Camera.cpp  Camera.h  Ray.h  ray.h
Math/: secondDegreeEquation.cpp  secondDegreeEquation.h
Object/: Geometry.cpp  Material.cpp  Material.h  Object.cpp  Object.h  ObjectIntersection.h  Sphere.cpp  Sphere.h
Scene/: Scene.cpp  Scene.h
Vector/: Vec3.cpp  Vec3.h
